# p1-seafoam-cicada

./: .env.example  .gitignore  BUG_FIXES.md  FINDINGS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION.md  PHASE2_FAILURE_ANALYSIS.md  PHASE2_TESTING.md  PHASE_1.md  PHASE_2.md  PLAN_REVIEW_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_TEST_COMMANDS.md  README.md  TESTING.md  TEST_UPDATE_SUMMARY.md  check_env.py  create_db.py  demo_rag_chat.py  docker-compose.yml  fly.toml  generate_mermaid_text.py  graph_diagram.mmd  graph_visualization.mmd  kb_index.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.bat  run_tests.sh  test_api.py  test_db.py  test_e2e.py  test_phase2_e2e.py  test_run_results.txt  test_stage2.py  test_stage3.py  (+2 more)
.chroma/: chroma.sqlite3
.cursor/rules/: mcp-tools-usage.md
app/: case_history.py  main.py  schema.py
app/graph/: __init__.py  nodes.py  state.py  tools.py  workflow.py
app/rag/: __init__.py  config.py  indexer.py  rag_nodes.py  retriever.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/cases/: page.tsx
frontend/components/: case-card.tsx  case-detail-modal.tsx  floating-chat-button.tsx  message-bubble.tsx  policy-information.tsx  ticket-card.tsx  ticket-detail.tsx  triage-chat.tsx  typing-indicator.tsx
frontend/lib/: api.ts  types.ts
interactions/: phase2_demo.json
mock_data/: issues.json  orders.json
p2-umber-abbey-main/: README.md
p2-umber-abbey-main/app/: main.py
p2-umber-abbey-main/interactions/: phase2_demo.json
p2-umber-abbey-main/mock_data/: issues.json  orders.json  replies.json
p2-umber-abbey-main/mock_data/policies/: chargeback_policy.md  warranty_policy.md
p2-umber-abbey-main/scripts/: kb_index.py
policies/: delivery_policy.md  fraud_policy.md  refund_policy.md
